--- a/gallery.html
+++ b/gallery.html
@@ -1,16 +1,211 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Gallery</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
-</head>
-<body>
-    <h1>
-        Galeria
-    </h1>
-</body>
+<html lang="en" class="no-js">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>VRapel</title>
+    <!--
+      <meta name="description" content="An implementation of Gil Huybrecht's Outdoors design" />
+      <meta name="keywords" content="template, web design, html, javascript, layout, css, slide out" />
+    -->
+    <!-- <meta name="author" content="Carlos Gómez" /> -->
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="css/base.css" />
+
+    <script>
+      document.documentElement.className = "js";
+      var supportsCssVars = function() {
+        var e,
+          t = document.createElement("style");
+        return (
+          (t.innerHTML = "root: { --tmp-var: bold; }"),
+          document.head.appendChild(t),
+          (e = !!(
+            window.CSS &&
+            window.CSS.supports &&
+            window.CSS.supports("font-weight", "var(--tmp-var)")
+          )),
+          t.parentNode.removeChild(t),
+          e
+        );
+      };
+      supportsCssVars() ||
+        alert(
+          "Please view this demo in a modern browser that supports CSS Variables."
+        );
+    </script>
+  </head>
+  <body class="loading">
+    <main>
+      <div class="sections">
+        <header class="sections__header">
+          <!-- <h1 class="title">VRTICAL</h1> -->
+          <a class="logo" href="index.html"> <img src="img/vrtical.svg" /> </a>
+        </header>
+        <div class="middle-title">Gallery</div>
+        <!-- menu -->
+        <nav class="menu">
+          <ul class="menu__inner">
+            <li class="menu__item">
+              <a class="menu__item-link" href="about.html">Inicio</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__item-link" href="about.html">Sobre nosotros</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__item-link" href="gallery.html">Galeria</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__item-link" href="contact.html">Contacto</a>
+            </li>
+          </ul>
+          <div class="menu__toggle">
+            <span class="menu__toggle-inner menu__toggle-inner--open">
+              menu
+            </span>
+            <span class="menu__toggle-inner menu__toggle-inner--close">
+              <svg class="icon icon--close">
+                <use xlink:href="#icon-close"></use>
+              </svg>
+            </span>
+          </div>
+        </nav>
+        <!-- facts expander with toggles; content for each is in its section -->
+        <div class="facts">
+          <div class="facts__toggle" style="display: none">
+            <span class="facts__toggle-inner facts__toggle-inner--more">
+              <svg class="icon icon--dot">
+                <use xlink:href="#icon-dot"></use>
+              </svg>
+              <span class="facts__toggle-text">galeria</span>
+            </span>
+            <span class="facts__toggle-inner facts__toggle-inner--less">
+              <svg class="icon icon--cross">
+                <use xlink:href="#icon-cross"></use>
+              </svg>
+              <span class="facts__toggle-text">cerrar</span>
+            </span>
+          </div>
+          <button class="button-contentclose">
+            <svg class="icon icon--close">
+              <use xlink:href="#icon-close"></use>
+            </svg>
+          </button>
+        </div>
+        <!-- index -->
+        <!--
+          <div class="sections__index">
+          	<span class="sections__index-current">
+          		<span class="sections__index-inner">01</span>
+          	</span>
+          	<span class="sections__index-total">02</span>
+          </div>
+        -->
+        <!-- navigation down -->
+        <!--
+          <nav class="sections__nav">
+          	<button class="sections__nav-item sections__nav-item--prev">
+          		<svg class="icon icon--navup"><use xlink:href="#icon-navup"></use></svg>
+          	</button>
+          	<button class="sections__nav-item sections__nav-item--next">
+          		<svg class="icon icon--navdown"><use xlink:href="#icon-navdown"></use></svg>
+          	</button>
+          </nav>
+        -->
+        <!-- sections -->
+        <section class="section section--current">
+          <div class="section__gallery__wrap">
+            <div class="section__gallery__wrap--flex">
+              <a class="section__gallery-item"
+                ><img src="img/candados.jpg" alt="Some image"
+              /></a>
+              <a class="section__gallery-item"
+                ><img src="img/candados_02.jpg" alt="Some image"
+              /></a>
+              <a class="section__gallery-item"
+                ><img src="img/mountains_01.png" alt="Some image"
+              /></a>
+              <a class="section__gallery-item"
+                ><img src="img/01.png" alt="Some image"
+              /></a>
+              <a class="section__gallery-item"
+                ><img src="img/02.png" alt="Some image"
+              /></a>
+              <a class="section__gallery-item"
+                ><img src="img/03.png" alt="Some image"
+              /></a>
+              <a class="section__gallery-item"
+                ><img src="img/04.png" alt="Some image"
+              /></a>
+              <a class="section__gallery-item"
+                ><img src="img/16.jpg" alt="Some image"
+              /></a>
+              <a class="section__gallery-item"
+                ><img src="img/17.jpg" alt="Some image"
+              /></a>
+              <a class="section__gallery-item"
+                ><img src="img/15.jpg" alt="Some image"
+              /></a>
+            </div>
+            <div class="section__gallery__wrap--flex">
+              <a class="section__gallery-item"
+                ><img src="img/05.png" alt="Some image"
+              /></a>
+              <a class="section__gallery-item"
+                ><img src="img/06.png" alt="Some image"
+              /></a>
+              <a class="section__gallery-item"
+                ><img src="img/07.jpg" alt="Some image"
+              /></a>
+              <a class="section__gallery-item"
+                ><img src="img/09.jpg" alt="Some image"
+              /></a>
+              <a class="section__gallery-item"
+                ><img src="img/10.jpg" alt="Some image"
+              /></a>
+              <a class="section__gallery-item"
+                ><img src="img/11.jpg" alt="Some image"
+              /></a>
+              <a class="section__gallery-item"
+                ><img src="img/13.jpg" alt="Some image"
+              /></a>
+              <a class="section__gallery-item"
+                ><img src="img/14.jpg" alt="Some image"
+              /></a>
+            </div>
+          </div>
+        </section>
+        <div class="footer ">
+          <div class="footer-wraper">
+            <ul class="list-style-none d-flex flex-wrap ">
+              <li class="mr-3">© 2018 <span>VRtical</span>, Inc.</li>
+              <li class="mr-3"><a href="contact.html">Contactactanos</a></li>
+            </ul>
+
+            <a class="logo" href="index.html">
+              <img src="img/vrtical.svg" />
+            </a>
+            <ul class="list-style-none d-flex flex-wrap ">
+              <li><a href="help.html">Ayuda</a></li>
+              <li><a href="about.html">Sobre nosotros</a></li>
+            </ul>
+          </div>
+          <div class="d-flex flex-justify-center pb-6">
+            <span class="f6 text-gray-light"></span>
+          </div>
+        </div>
+      </div>
+      <!-- / sections -->
+    </main>
+    <script src="js/imagesloaded.pkgd.min.js"></script>
+    <script src="js/charming.min.js"></script>
+    <script src="js/anime.min.js"></script>
+    <script src="js/main.1.js"></script>
+    <script src="js/app.js"></script>
+  </body>
 </html>
