--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,10 @@
           <h1>Equipo:</h1>
           <h2>Mauricio Rivera Leal</h2>
           <h2>Abraham Israel Sanchez Vallejo</h2>
-          <h2>Ipsum</h2>
+          <h2>Martin Emilio Pereda Soria</h2>
+          <h2>Garmy Alonso Machuca</h2>
+          <h2>Devanhi Sahi García Cortes</h2>
+          <h2>Carlos Eduardo Gómez García</h2>
         </div>
         <div class="footer ">
           <div class="footer-wraper">
